@@ -816,9 +816,9 @@ CONFIG_EXAMPLES_USBSTRG_NLUNS=1
 CONFIG_EXAMPLES_USBSTRG_DEVMINOR1=0
 CONFIG_EXAMPLES_USBSTRG_DEVPATH1="/dev/mmcsd0"
 CONFIG_EXAMPLES_USBSTRG_TRACEINIT=n
-CONFIG_EXAMPLES_USBSTRG_TRACECLASS=y
-CONFIG_EXAMPLES_USBSTRG_TRACETRANSFERS=y
-CONFIG_EXAMPLES_USBSTRG_TRACECONTROLLER=y
+CONFIG_EXAMPLES_USBSTRG_TRACECLASS=n
+CONFIG_EXAMPLES_USBSTRG_TRACETRANSFERS=n
+CONFIG_EXAMPLES_USBSTRG_TRACECONTROLLER=n
 CONFIG_EXAMPLES_USBSTRG_TRACEINTERRUPTS=n
 
 #
